removed unnecessary classes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,54 +20,15 @@
         android:supportsRtl="true">
 
         <activity
-            android:name=".MainActivity"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait"
-            android:theme="@style/MainTheme"
-            android:windowSoftInputMode="stateAlwaysHidden">
-
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
-
-        <activity
-            android:name=".InventoryActivity"
+            android:name="com.porterlee.mobileinventory.InventoryActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait"
             android:theme="@style/InventoryTheme"
             android:windowSoftInputMode="stateAlwaysHidden">
 
             <intent-filter>
-                <action android:name="com.porterlee.mobileinventory.INVENTORY"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-            </intent-filter>
-        </activity>
-
-        <activity
-            android:name=".PreloadLocationsActivity"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait"
-            android:theme="@style/PreloadTheme"
-            android:windowSoftInputMode="stateAlwaysHidden">
-
-            <intent-filter>
-                <action android:name="com.porterlee.mobileinventory.PRELOAD_LOCATIONS"/>
-                <category android:name="android.intent.category.ALTERNATIVE"/>
-            </intent-filter>
-        </activity>
-
-        <activity
-            android:name=".PreloadInventoryActivity"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait"
-            android:theme="@style/PreloadTheme"
-            android:windowSoftInputMode="stateAlwaysHidden">
-
-            <intent-filter>
-                <action android:name="com.porterlee.mobileinventory.PRELOAD_INVENTORY"/>
-                <category android:name="android.intent.category.ALTERNATIVE"/>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
     </application>
