changed package name
changed package name to
"com.porterlee.standardinventory"

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 27
     
     defaultConfig {
-        applicationId "com.porterlee.mobileinventory"
+        applicationId "com.porterlee.standardinventory"
         minSdkVersion 17
         targetSdkVersion 27
         versionCode 1
