--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.porterlee.mobileinventory">
+    package="com.porterlee.standardinventory">
 
     <permission
-        android:name="com.porterlee.mobileinventory.permission.SCANNER_RESULT_RECEIVER"
+        android:name="com.porterlee.standardinventory.permission.SCANNER_RESULT_RECEIVER"
         android:protectionLevel="normal"/>
 
     <uses-permission android:name="android.permission.VIBRATE" />
@@ -20,7 +20,7 @@
         android:supportsRtl="true">
 
         <activity
-            android:name="InventoryActivity"
+            android:name="com.porterlee.standardinventory.InventoryActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait"
             android:theme="@style/InventoryTheme">
