finishing up changes for next version
added debug icon and changed application id for debug app for testing

fixed barcode prefix and suffix

finishing up location view

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
-    
     defaultConfig {
         applicationId "com.porterlee.standardinventory"
         minSdkVersion 17
@@ -11,11 +10,20 @@ android {
         versionName "1.4"
         //testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
-
     buildTypes {
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            resValue "string", "launcher_name", "Mobile Inventory"
+        }
+        debug {
+            applicationIdSuffix ".debug"
+            debuggable true
+        }
+    }
+    sourceSets {
+        main {
+            manifest.srcFile 'src/main/AndroidManifest.xml'
         }
     }
 }
