Removed many unnecessary global variables Replaced scanner code with library Now compatible with   janam     XM5 - Jelly Bean     XT2 - Lollipop     XT2+     XM75 - Marshmallow     XT100 - Marshmallow     XG200   zebra     ET5X - Lollipop, Marshmallow     MC18 - Lollipop     MC32N0 - Lollipop     MC33 - Nougat     MC40 - Lollipop     TC20 - Nougat     TC25 - Nougat     TC51 - Marshmallow, Nougat     TC56 - Marshmallow, Nougat     TC70 - Lollipop     TC70x - Marshmallow, Nougat     TC75 - Lollipop     TC75x - Marshmallow, Nougat     TC8000 - Lollipop     VC80x - Nougat     WT6000 - Lollipop Replaced some hardcoded string with resources Using lambda expressions now

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,37 +14,52 @@ android {
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            resValue "string", "launcher_name", "Mobile Inventory"
         }
         debug {
             applicationIdSuffix ".debug"
             debuggable true
         }
     }
+    flavorDimensions "scannerSdk"
+    productFlavors {
+        janam_XM5 {}
+        janam_XT2_XT2__XM75_XT100_XG200 {}
+        zebra_emdk_symbol_26 {}
+        /*
+        applicationVariants.all {
+            variant ->
+                android.productFlavors.all {
+                    flavor ->
+                        println(flavor.name)
+                        variant.buildConfigField 'boolean', 'is_' + flavor.getName(), String.valueOf(variant.getName().startsWith(flavor.name))
+                }
+        }
+        */
+    }
     android.applicationVariants.all { variant ->
         variant.outputs.all {
             outputFileName = "standard_inventory-${variant.name}-${variant.versionName}.apk"
         }
     }
-    sourceSets {
-        main {
-            manifest.srcFile 'src/main/AndroidManifest.xml'
-        }
+    compileOptions {
+        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_8
     }
 }
 
 dependencies {
+    janam_XM5Implementation project(':plc_scanners-janam_XM5Release-1.1')
+    janam_XT2_XT2__XM75_XT100_XG200Implementation project(':plc_scanners-janam_XT2_XT2__XM75_XT100_XG200Release-1.1')
+    zebra_emdk_symbol_26Implementation project(':plc_scanners-zebra_emdk_symbol_26Release-1.1')
+
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:support-core-utils:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'me.zhanghai.android.materialprogressbar:library:1.4.2'
+    implementation 'org.jetbrains:annotations-java5:15.0'
     //testImplementation 'junit:junit:4.12'
     //androidTestImplementation 'com.android.support.test:runner:1.0.1'
     //androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    //implementation project(':device.hijack')
-    //implementation project(':device.nfc')
-    implementation project(':device.scanner')
-    //implementation project(':device.service')
 }
