Disabled scanner while dialog is open
disabled scanner while dialog is open
removed unused class WeakAsyncTask
updated scanner libs

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,9 +41,8 @@ android {
             outputFileName = "standard_inventory-${variant.name}-${variant.versionName}.apk"
         }
     }
-    compileOptions {
-        targetCompatibility JavaVersion.VERSION_1_8
-        sourceCompatibility JavaVersion.VERSION_1_8
+    configurations.all {
+        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
     }
 }
 
