--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.porterlee.standardinventory"
         minSdkVersion 17
         targetSdkVersion 27
-        versionCode 5
-        versionName "1.4"
+        versionCode 6
+        versionName "1.5"
         //testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -20,30 +20,45 @@ android {
             debuggable true
         }
     }
-    flavorDimensions "scannerSdk"
+    flavorDimensions "system", "scannerSdk"
     productFlavors {
-        janam_XM5 {}
-        janam_XT2_XT2__XM75_XT100_XG200 {}
-        zebra_emdk_symbol_26 {}
-        /*
+        Default {
+            dimension "system"
+            resValue "string", "app_name", "Mobile Inventory"
+        }
+        LAM {
+            dimension "system"
+            resValue "string", "app_name", "LAM Inventory"
+            applicationIdSuffix ".lam"
+        }
+        janam_XM5 {
+            dimension "scannerSdk"
+        }
+        janam_XT2_XT2__XM75_XT100_XG200 {
+            dimension "scannerSdk"
+        }
+        zebra_emdk_symbol_26 {
+            dimension "scannerSdk"
+        }
         applicationVariants.all {
             variant ->
                 android.productFlavors.all {
                     flavor ->
-                        println(flavor.name)
-                        variant.buildConfigField 'boolean', 'is_' + flavor.getName(), String.valueOf(variant.getName().startsWith(flavor.name))
+                        for (int i = 0; i < flavorDimensionList.size(); i++) {
+                            if (flavor.dimension == flavorDimensionList[i]) {
+                                variant.buildConfigField 'boolean', 'is_' + flavor.getName() + "_" + flavor.dimension, String.valueOf(flavor.name == variant.productFlavors[i].getName())
+                            }
+                        }
                 }
         }
-        */
     }
     android.applicationVariants.all { variant ->
         variant.outputs.all {
             outputFileName = "standard_inventory-${variant.name}-${variant.versionName}.apk"
         }
     }
-    compileOptions {
-        targetCompatibility JavaVersion.VERSION_1_8
-        sourceCompatibility JavaVersion.VERSION_1_8
+    configurations.all {
+        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
     }
 }
 
